--- a/styles.css
+++ b/styles.css
@@ -124,13 +124,13 @@ body {
 }
 
 .hero-mascot {
-    position: absolute;
-    right: -50px !important;
-    top: calc(50% + 50px);
-    transform: translateY(-50%);
-    width: 470px;
-    max-width: none;
-    height: auto;
+    position: absolute !important;
+    right: 0px !important;
+    top: calc(50% + 50px) !important;
+    transform: translateY(-50%) !important;
+    width: 470px !important;
+    max-width: none !important;
+    height: auto !important;
     pointer-events: none;
     z-index: 1;
     opacity: 0.95;
@@ -604,9 +604,9 @@ section {
 /* Responsive Design */
 @media (min-width: 1400px) {
     .hero-mascot {
-        width: 550px;
-        right: -70px !important;
-        top: calc(50% + 50px);
+        width: 550px !important;
+        right: 20px !important;
+        top: calc(50% + 50px) !important;
     }
 }
 
