--- a/styles.css
+++ b/styles.css
@@ -149,9 +149,9 @@ body {
 .hero-mascot {
     position: absolute;
     top: 50%;
-    right: -10%;
-    width: min(40vw, 520px);
-    transform: translateY(-50%);
+    right: -8%;
+    width: min(42vw, 540px);
+    transform: translate(-18%, -50%);
     pointer-events: none;
     z-index: 1;
 }
@@ -622,8 +622,9 @@ section {
 /* Responsive Design */
 @media (min-width: 1400px) {
     .hero-mascot {
-        width: 550px;
-        right: -30px;
+        width: 580px;
+        right: -6%;
+        transform: translate(-10%, -50%);
     }
 }
 
