--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ body {
 
 .hero-mascot {
     position: absolute;
-    left: 44%;
+    left: 480px;
     top: 50%;
     width: min(42vw, 540px);
     transform: translateY(-50%);
@@ -623,7 +623,7 @@ section {
 @media (min-width: 1400px) {
     .hero-mascot {
         width: 580px;
-        left: 45%;
+        left: 520px;
     }
 }
 
