--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,14 @@ body {
     justify-content: center;
 }
 
+.section-image.image-right {
+    justify-content: flex-end;
+}
+
+.section-content.content-tight {
+    padding-left: 1rem;
+}
+
 /* Hero Section */
 .hero h1 {
     font-family: 'Inter', sans-serif;
@@ -342,6 +350,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 2rem;
+    display: inline-block;
 }
 
 .highlight-box p {
@@ -350,7 +359,7 @@ body {
     line-height: 1.7;
     margin: 0;
     font-weight: 500;
-    text-align: left;
+    text-align: center;
 }
 
 /* Transformations */
